[package]
name = "grpc_hello_world"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "helloworld-server"
path = "src/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
tonic = { version = "0.14.1", features = ["transport", "tls-webpki-roots"] }
tonic-prost = "0.14.1"                                                       # <-- add this
prost = "0.14"
prost-types = "0.14"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
rcgen = { version = "0.14.3", features = ["pem", "crypto"] }

[build-dependencies]
tonic-prost-build = "0.14.1"
