[package]
name = "grpc_hello_world"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "helloworld-server"
path = "src/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "fs"] }
tonic = { version = "0.14.1", features = ["transport", "tls-webpki-roots"] }
tonic-prost = "0.14.1"
prost = "0.14"
# prost-types = "0.14"
rcgen = { version = "0.14.3", features = ["pem", "crypto"] }

# Select rustls backend:
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[build-dependencies]
tonic-prost-build = "0.14.1"
